# pyjarsigner

./: .gitignore  Pipfile  README.md  crypto.py  jarutil.py  manifest.py  pyproject.toml  setup.cfg  setup.py
pyjarsigner/: __init__.py  change.py  dirutils.py  jarutil.py  manifest.py
scripts/: deploy.sh
